# rbinghidra

./: .gitignore  Cargo.toml  README.md  commit_message.txt  fix.py  fix_clippy.patch
.jules/: bolt.md  sentinel.md
crates/rbm-ghidra/: Cargo.toml
crates/rbm-ghidra/src/: anti_analysis.rs  behaviors.rs  bookmarks.rs  bytes.rs  callgraph.rs  cfg.rs  code_index.rs  constants.rs  context_api_slots.rs  create_function.rs  create_label.rs  data_types.rs  decompile.rs  decompile_meta.rs  decompiler_block_behavior.rs  decompiler_calls.rs  decompiler_cfg.rs  decompiler_memory.rs  decompiler_slice.rs  defined_data.rs  delete.rs  disassemble.rs  dynamic_dispatch_table.rs  equates.rs  function_checkpoints.rs  function_slices.rs  function_stats.rs  go_metadata.rs  health.rs  import.rs  imports_exports.rs  inspect.rs  lib.rs  list_functions.rs  memory_map.rs  namespaces.rs  path_digest.rs  pcode.rs  project.rs  rename_function.rs  (+14 more)
crates/rbm-ghidra/tests/: anti_analysis_spawn_unit.rs  anti_analysis_unit.rs  behaviors_spawn_unit.rs  behaviors_unit.rs  bookmarks_test.rs  bytes_integration.rs  bytes_spawn_unit.rs  bytes_unit.rs  callgraph_integration.rs  callgraph_spawn_unit.rs  callgraph_unit.rs  cfg_integration.rs  cfg_spawn_unit.rs  cfg_unit.rs  constants_integration.rs  constants_spawn_unit.rs  constants_unit.rs  context_api_slots_unit.rs  data_types_test.rs  decompile_integration.rs  decompile_meta_integration.rs  decompile_meta_spawn_unit.rs  decompile_spawn_unit.rs  decompile_unit.rs  decompiler_block_behavior_spawn_unit.rs  decompiler_calls_spawn_unit.rs  decompiler_cfg_spawn_unit.rs  decompiler_cfg_unit.rs  decompiler_memory_spawn_unit.rs  decompiler_slice_test.rs  decompiler_views_integration.rs  decompiler_views_unit.rs  defined_data_unit.rs  delete_unit.rs  disassemble_test.rs  dynamic_dispatch_table_unit.rs  equates_test.rs  function_checkpoints_test.rs  function_slices_spawn_unit.rs  function_stats_test.rs  (+35 more)
crates/rbm-ghidra/tests/common/: mod.rs
crates/rbm-server/: Cargo.toml
crates/rbm-server/src/: lib.rs  main.rs  server.rs
ghidra_scripts/: anti_analysis.java  behaviors.java  bookmarks.java  callgraph.java  cfg.java  constants.java  context_api_slots.java  create_function.java  create_label.java  data_types.java  decompile_all_functions.java  decompile_function.java  decompile_meta.java  decompiler_block_behavior.java  decompiler_calls.java  decompiler_cfg.java  decompiler_memory.java  decompiler_slice.java  defined_data.java  disassemble.java  dynamic_dispatch_table.java  equates.java  extract_functions.java  function_checkpoints.java  function_slices.java  function_stats.java  go_metadata.java  list_exports.java  list_imports.java  list_namespaces.java  list_xrefs.java  memory_map.java  path_digest.java  pcode.java  read_bytes.java  rename_function.java  search_bytes.java  search_decompilation.java  search_strings.java  search_symbols.java  (+6 more)
src/: anti_analysis.rs  behaviors.rs  callgraph.rs  cfg.rs  config.rs  context_api_slots.rs  data_types.rs  decompile.rs  decompiler_block_behavior.rs  decompiler_calls.rs  decompiler_cfg.rs  decompiler_memory.rs  defined_data.rs  dynamic_dispatch_table.rs  equates.rs  error.rs  function_slices.rs  import.rs  imports_exports.rs  inspect.rs  lib.rs  main.rs  memory_map.rs  namespaces.rs  paths.rs  project.rs  search_bytes.rs  search_decompilation.rs  server.rs  (+5 more)
(+74 files in other folders)
