[package]
name = "rbinghidra"
version = "1.3.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/kirkderp/rbinghidra"
readme = "README.md"
description = "MCP server for Ghidra-based binary analysis"
keywords = ["binary-analysis", "ghidra", "reverse-engineering"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
tokio = { version = "1", default-features = false, features = ["io-std", "io-util", "rt", "sync", "time", "process", "fs"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = { version = "0.10", default-features = false }

[features]
default = []
integration-ghidra = []

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"
unsafe_code = "deny"
missing_docs = "allow"  # docs are in tool descriptions, not pub fn headers
single_use_lifetimes = "deny"
unreachable_pub = "deny"
unexpected_cfgs = "deny"
clashing_extern_declarations = "deny"
missing_copy_implementations = "deny"
noop_method_call = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
variant_size_differences = "deny"
elided_lifetimes_in_paths = "allow"  # noisy

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
undocumented_unsafe_blocks = "deny"
multiple_crate_versions = "allow"
redundant_pub_crate = "allow"
